# stc

./: README.md
bot/: bot.py  pyproject.toml
geck/: pyproject.toml
geck/examples/: search-stc.py
geck/libstc_geck/: advices.py  cli.py  client.py
uploader/: uploader.py
web/: .eslintignore  .eslintrc.cjs  README.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  vite.config.ts
web/public/: _redirects  mathpix.js
web/scripts/: build.sh  install.sh
web/src/: App.vue  database.ts  main.ts  router.ts  translations.ts  utils.ts
web/src/assets/css/: main.css
web/src/components/: connectivity-issues.vue  djvu-reader.vue  djvu.js  document-buttons.vue  document.vue  download-progress.ts  epub-reader.vue  footer-bar.vue  loading-spinner.vue  navigation-bar.vue  qr-code.vue  search-bar.vue  search-result-item.vue  search-results.vue  tags-list.vue
web/src/pages/: document-view.vue  help-view.vue  how-to-search-view.vue  intro-view.vue  reader-view.vue  replication-view.vue  search-view.vue
web/src/services/search/: index.ts  query-processor.ts  search-provider.ts  search-service.ts
web/src/types/: index.ts
