[project]
name = "libstc-geck"
version = "2.1.4"
description = "GECK (Garden Of Eden Creation Kit) is a toolkit for setting up and maintaning STC"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "aiohttp>=3.11",
    "aiokit>=1.3",
    "aiosumma>=2",
    "humanfriendly>=10.0",
    "ipfs-hamt-directory-py>=0.1.1",
    "izihawa-ipfs-api>=1.0.7",
    "izihawa-utils>=1.2",
    "multidict>=6.0.4",
    "summa-embed>=0.25",
    "termcolor>=2.3.0",
    "fire>=0.7.0",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project.scripts]
geck = "libstc_geck.cli:main"
